{
  "version": 4,
  "terraform_version": "0.12.26",
  "serial": 24,
  "lineage": "4b884490-17a2-f135-e77e-b8351226eb51",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ekscluster-IntGW",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:072873244107:internet-gateway/igw-0d47bee96458fece2",
            "id": "igw-0d47bee96458fece2",
            "owner_id": "072873244107",
            "tags": {
              "Name": "ekscluster-InternetGW"
            },
            "vpc_id": "vpc-06a035ba9214f533c"
          },
          "dependencies": [
            "aws_vpc.ekscluster-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "ekscluster_RouteTable",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:072873244107:route-table/rtb-0d2efc4e5d9fef6a9",
            "id": "rtb-0d2efc4e5d9fef6a9",
            "owner_id": "072873244107",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d47bee96458fece2",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ekscluster_Routetable"
            },
            "vpc_id": "vpc-06a035ba9214f533c"
          },
          "dependencies": [
            "aws_internet_gateway.ekscluster-IntGW",
            "aws_vpc.ekscluster-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ekscluster_Assn",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05741ead3fc3c52d3",
            "route_table_id": "rtb-0d2efc4e5d9fef6a9",
            "subnet_id": "subnet-0fd2b684273ee5129"
          },
          "dependencies": [
            "aws_internet_gateway.ekscluster-IntGW",
            "aws_route_table.ekscluster_RouteTable",
            "aws_subnet.ekscluster-Subnet1",
            "aws_vpc.ekscluster-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ekscluster_Sec_Group",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:072873244107:security-group/sg-0c48b218a30704a96",
            "description": "To allow inbound and outbound traffic to ekscluster",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c48b218a30704a96",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8081,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8081
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 9000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9000
              }
            ],
            "name": "ekscluster Security Group",
            "name_prefix": "",
            "owner_id": "072873244107",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow traffic"
            },
            "timeouts": null,
            "vpc_id": "vpc-06a035ba9214f533c"
          },
          "dependencies": [
            "aws_vpc.ekscluster-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ekscluster-Subnet1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:072873244107:subnet/subnet-0fd2b684273ee5129",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.30.10.0/24",
            "id": "subnet-0fd2b684273ee5129",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "072873244107",
            "tags": {
              "Name": "ekscluster-Subnet1"
            },
            "tags_all": {
              "Name": "ekscluster-Subnet1"
            },
            "vpc_id": "vpc-06a035ba9214f533c"
          },
          "dependencies": [
            "aws_vpc.ekscluster-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "ekscluster-VPC",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:072873244107:vpc/vpc-06a035ba9214f533c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.30.0.0/16",
            "default_network_acl_id": "acl-055eac439e8bf427c",
            "default_route_table_id": "rtb-03e5d41f789285464",
            "default_security_group_id": "sg-0659341f380fcd88a",
            "dhcp_options_id": "dopt-46ce473c",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-06a035ba9214f533c",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-03e5d41f789285464",
            "owner_id": "072873244107",
            "tags": {
              "Name": "ekscluster-VPC"
            },
            "tags_all": {
              "Name": "ekscluster-VPC"
            }
          }
        }
      ]
    }
  ]
}